# bitwarden-sdk-internal

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.github/: CODEOWNERS  renovate.json  renovate.json5
.github/workflows/: build-android.yml  build-rust-crates.yml  build-swift.yml  build-wasm-internal.yml  check-powerset.yml  cloc.yml  delete-old-packages.yml  direct-minimal-versions.yml  enforce-labels.yml  lint.yml  memory-testing.yml  minimum-rust-version.yml  publish-rust-crates.yml  publish-wasm-internal.yml  release-rust-crates.yml  release-swift.yml  rust-test.yml  rustdoc.yml  scan.yml  version-bump.yml
bitwarden_license/bitwarden-sm/: Cargo.toml
bitwarden_license/bitwarden-sm/src/: client_projects.rs  client_secrets.rs  error.rs  lib.rs
bitwarden_license/bitwarden-sm/src/projects/: create.rs  delete.rs  get.rs  list.rs  project_response.rs  update.rs
bitwarden_license/bitwarden-sm/src/secrets/: create.rs  delete.rs  get.rs  get_by_ids.rs  list.rs  secret_response.rs  sync.rs  update.rs
crates/bitwarden-api-api/: Cargo.toml  README.md
crates/bitwarden-api-api/.openapi-generator/: FILES
crates/bitwarden-api-api/src/apis/: accounts_billing_api.rs  ciphers_api.rs  devices_api.rs  folders_api.rs  groups_api.rs  info_api.rs  mod.rs  organization_billing_api.rs  organization_domain_api.rs  organization_sponsorships_api.rs  organization_users_api.rs  organizations_api.rs  policies_api.rs  reports_api.rs  security_task_api.rs
crates/bitwarden-api-api/src/models/: cipher_details_response_model.rs  cipher_mini_details_response_model.rs  cipher_mini_response_model.rs  cipher_request_model.rs  cipher_response_model.rs  cipher_ssh_key_model.rs  cipher_type.rs  cipher_with_id_request_model.rs  config_response_model.rs  drop_password_health_report_application_request.rs  mod.rs  (+38 more)
crates/bitwarden-api-identity/: Cargo.toml  README.md
crates/bitwarden-core/: Cargo.toml
crates/bitwarden-core/src/: error.rs  lib.rs  util.rs
crates/bitwarden-crypto/: Cargo.toml
crates/bitwarden-crypto/src/: error.rs  lib.rs
crates/bitwarden-error/: Cargo.toml
crates/bitwarden-error-macro/: Cargo.toml
crates/bitwarden-error-macro/src/: args.rs  attribute.rs  lib.rs
crates/bitwarden-error-macro/src/basic/: attribute.rs
crates/bitwarden-error-macro/src/flat/: attribute.rs
crates/bitwarden-error-macro/src/full/: attribute.rs
crates/bitwarden-error/src/: flat_error.rs  lib.rs  wasm.rs
crates/bitwarden-error/tests/: basic.rs  flat.rs  full.rs  mod.rs
crates/bitwarden-error/tests/compilation_tests/: full.rs  full.stderr
crates/bitwarden-exporters/: Cargo.toml
crates/bitwarden-exporters/resources/: json_export.json
crates/bitwarden-exporters/src/: client_exporter.rs  csv.rs  encrypted_json.rs  error.rs  export.rs  exporter_client.rs  json.rs  lib.rs  models.rs
crates/bitwarden-exporters/src/cxf/: card.rs  error.rs  export.rs  import.rs  login.rs  mod.rs
crates/bitwarden-exporters/src/cxp/: error.rs  export.rs  import.rs  mod.rs
crates/bitwarden-fido/: Cargo.toml
crates/bitwarden-fido/src/: authenticator.rs  client.rs  types.rs
crates/bitwarden-generators/src/: generator_client.rs  lib.rs
crates/bitwarden-send/: Cargo.toml
crates/bitwarden-send/src/: lib.rs  send_client.rs
crates/bitwarden-ssh/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-ssh/resources/generator/: rsa3072_key
crates/bitwarden-ssh/resources/import/: wrong_label
crates/bitwarden-ssh/src/: error.rs  generator.rs  import.rs  lib.rs
crates/bitwarden-ssh/tests/: ed25519_key  rsa4096_key
crates/bitwarden-uniffi/: Cargo.toml
crates/bitwarden-uniffi/kotlin/: README.md  publish-local.sh
crates/bitwarden-uniffi/src/: android_support.rs  crypto.rs  error.rs  lib.rs
crates/bitwarden-uniffi/swift/: build.sh
crates/bitwarden-vault/: Cargo.toml
crates/bitwarden-vault/src/: collection.rs  error.rs  lib.rs  sync.rs  totp.rs  totp_client.rs  vault_client.rs
crates/bitwarden-wasm-internal/: Cargo.toml  build.rs  build.sh
crates/bitwarden-wasm-internal/npm/: .gitignore  package.json
crates/bitwarden-wasm-internal/src/: client.rs  crypto.rs  lib.rs  ssh.rs
crates/bw/: Cargo.toml
crates/bw/src/: main.rs
crates/memory-testing/: Dockerfile  run_test.sh
languages/kotlin/: README.md
languages/kotlin/sdk/: build.gradle
support/: build-api.sh
(+64 files in other folders)
