[package]
name = "bitwarden-error"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
wasm = [
    "bitwarden-error-macro/wasm",
    "dep:js-sys",
    "dep:tsify-next",
    "dep:wasm-bindgen",
]

[dependencies]
bitwarden-error-macro = { workspace = true }
js-sys = { workspace = true, optional = true }
tsify-next = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
serde.workspace = true
trybuild = "1.0.101"
wasm-bindgen-test = "0.3.45"
