[package]
name = "bitwarden-ssh"
description = """
Internal crate for the bitwarden crate. Do not use.
"""
exclude = ["/resources"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
wasm = [
    "bitwarden-error/wasm",
    "dep:tsify-next",
    "dep:wasm-bindgen"
] # WASM support

[dependencies]
bitwarden-error = { workspace = true }
ed25519 = { version = ">=2.2.3, <3.0", features = ["pkcs8"] }
pem-rfc7468 = "0.7.0"
pkcs8 = { version = ">=0.10.2, <0.11", features = ["encryption"] }
rand = ">=0.8.5, <0.9"
rsa = ">=0.9.2, <0.10"
serde.workspace = true
ssh-key = { version = ">=0.6.7, <0.7", features = [
    "ed25519",
    "encryption",
    "rsa",
], default-features = false }
thiserror = { workspace = true }
tsify-next = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
rand_chacha = "0.3.1"

[lints]
workspace = true
